--- a/css/member.css
+++ b/css/member.css
@@ -953,138 +953,31 @@ img {
   position: relative;
   height: 31.25rem;
 }
-.container .wrap section.dashboard article.inoculation .inner .cont .list-cont.list2 .cal-wrap {
+.container .wrap section.dashboard article.inoculation .inner .cont .list-cont.list2 .calendar-wrap1 .calendar .calendar-box .ctr-box {
+  display: inline-block;
+}
+.container .wrap section.dashboard article.inoculation .inner .cont .list-cont.list2 .calendar-wrap1 .calendar .calendar-box .ctr-box button {
+  width: 1.25rem;
+  height: 1.25rem;
+  background-color: #000;
   position: absolute;
+  left: 0rem;
+  top: 0rem;
+  right: auto;
+  bottom: auto;
+  z-index: 10;
+}
+.container .wrap section.dashboard article.inoculation .inner .cont .list-cont.list2 .calendar-wrap1 .calendar .calendar-box .ctr-box button.prev {
+  left: 0rem;
+  top: 0rem;
+  right: auto;
+  bottom: auto;
+}
+.container .wrap section.dashboard article.inoculation .inner .cont .list-cont.list2 .calendar-wrap1 .calendar .calendar-box .ctr-box button.next {
   right: 0rem;
   top: 0rem;
   left: auto;
   bottom: auto;
-}
-.container .wrap section.dashboard article.inoculation .inner .cont .list-cont.list2 .cal-wrap .cal-btn {
-  position: absolute;
-  right: 0rem;
-  top: 0rem;
-  left: auto;
-  bottom: auto;
-}
-.container .wrap section.dashboard article.inoculation .inner .cont .list-cont.list2 .cal-wrap .cal-btn:nth-child(1) {
-  right: 2.375rem;
-}
-.container .wrap section.dashboard article.inoculation .inner .cont .list-cont.list2 .cal-wrap .cal-btn input {
-  width: 1.75rem;
-  height: 1.75rem;
-  border: 0;
-  background-color: #fff;
-  display: inline-block;
-}
-.container .wrap section.dashboard article.inoculation .inner .cont .list-cont.list2 .cal-wrap #preventMonth_Button {
-  background-repeat: no-repeat;
-  background-image: url('../img/member/btn_prev.png');
-  background-size: contain;
-}
-.container .wrap section.dashboard article.inoculation .inner .cont .list-cont.list2 .cal-wrap #nextMonth_Button {
-  background-repeat: no-repeat;
-  background-image: url('../img/member/btn_next.png');
-  background-size: contain;
-}
-.container .wrap section.dashboard article.inoculation .inner .cont .list-cont.list2 .cal-wrap #calendar_table {
-  font-size: 0.9375rem;
-  width: 100%;
-  text-align: center;
-  table-layout: fixed;
-  border-collapse: collapse;
-  margin-top: 2.5rem;
-}
-.container .wrap section.dashboard article.inoculation .inner .cont .list-cont.list2 .cal-wrap #calendar_table tr th,
-.container .wrap section.dashboard article.inoculation .inner .cont .list-cont.list2 .cal-wrap #calendar_table tr td {
-  font-size: 0.9375rem;
-  width: 3.375rem;
-  letter-spacing: -0.0625rem;
-}
-.container .wrap section.dashboard article.inoculation .inner .cont .list-cont.list2 .cal-wrap #calendar_table tr th {
-  color: #AAAAAA;
-  line-height: 2.5rem;
-  padding-bottom: 1.875rem;
-}
-.container .wrap section.dashboard article.inoculation .inner .cont .list-cont.list2 .cal-wrap #calendar_table tr td {
-  height: 4.8125rem;
-  z-index: 1;
-  position: relative;
-  vertical-align: top;
-}
-.container .wrap section.dashboard article.inoculation .inner .cont .list-cont.list2 .cal-wrap #calendar_table tr td:nth-child(1) {
-  color: #FA5353;
-}
-.container .wrap section.dashboard article.inoculation .inner .cont .list-cont.list2 .cal-wrap #calendar_table tr td.today {
-  background-color: #fff;
-  font-weight: 400;
-  position: relative;
-  color: #fff;
-}
-.container .wrap section.dashboard article.inoculation .inner .cont .list-cont.list2 .cal-wrap #calendar_table tr td.today:after {
-  content: '';
-  display: block;
-  background-color: #103831;
-  width: 3.25rem;
-  height: 3.25rem;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  right: auto;
-  bottom: auto;
-  transform: translate(-50%, -50%);
-  border-radius: 50%;
-  z-index: -1;
-}
-.container .wrap section.dashboard article.inoculation .inner .cont .list-cont.list2 .cal-wrap #calendar_table tr td.day-active {
-  background-color: #fff;
-  color: #333;
-}
-.container .wrap section.dashboard article.inoculation .inner .cont .list-cont.list2 .cal-wrap #calendar_table tr td span {
-  width: 100%;
-  display: inline-block;
-  position: absolute;
-  left: 50%;
-  top: 1.25rem;
-  right: auto;
-  bottom: auto;
-  transform: translateX(-50%);
-}
-.container .wrap section.dashboard article.inoculation .inner .cont .list-cont.list2 .cal-wrap #calendar_table tr td i {
-  width: 0.5625rem;
-  height: 0.5625rem;
-  border-radius: 50%;
-  display: inline-block;
-  margin-top: 0rem;
-  margin-right: 0.125rem;
-  margin-bottom: 0rem;
-  margin-left: 0.125rem;
-}
-.container .wrap section.dashboard article.inoculation .inner .cont .list-cont.list2 .cal-wrap #calendar_table tr td i:nth-child(1) {
-  background-color: #FAB856;
-}
-.container .wrap section.dashboard article.inoculation .inner .cont .list-cont.list2 .cal-wrap #calendar_table tr td i:nth-child(2) {
-  background-color: #6F95F2;
-}
-.container .wrap section.dashboard article.inoculation .inner .cont .list-cont.list2 .cal-wrap #calendar_table tr td i:nth-child(3) {
-  background-color: #96C15A;
-}
-.container .wrap section.dashboard article.inoculation .inner .cont .list-cont.list2 .cal-wrap #calendar_table tr:nth-child(4) {
-  position: relative;
-}
-.container .wrap section.dashboard article.inoculation .inner .cont .list-cont.list2 .cal-wrap #calendar_table tr:nth-child(4) td:nth-child(3) {
-  background-color: #F5F5F5;
-}
-.container .wrap section.dashboard article.inoculation .inner .cont .list-cont.list2 .cal-wrap #calendar_table tr:nth-child(4) td:nth-child(3):after {
-  content: '80,000';
-  position: absolute;
-  width: 100%;
-  height: 1.5625rem;
-  left: 50%;
-  bottom: 0.3125rem;
-  right: auto;
-  top: auto;
-  transform: translateX(-50%);
 }
 .container .wrap section.dashboard article.inoculation .inner .cont .list-cont.list3 {
   text-align: left;
@@ -1394,100 +1287,6 @@ img {
   height: 100%;
   cursor: pointer;
   display: inline-block;
-}
-.container .wrap section.dashboard article.account-calendar .inner .calendar-wrap {
-  width: 100%;
-  height: 30.75rem;
-  border: 1px solid #eee;
-  padding-top: 1.25rem;
-  padding-right: 0rem;
-  padding-bottom: 1.875rem;
-  padding-left: 0rem;
-  border-radius: 0.375rem;
-  box-sizing: border-box;
-  margin-bottom: 1.875rem;
-  position: relative;
-  z-index: 2;
-}
-.container .wrap section.dashboard article.account-calendar .inner .calendar-wrap .calendar {
-  padding: 0rem;
-  border-bottom: 0;
-}
-.container .wrap section.dashboard article.account-calendar .inner .calendar-wrap .calendar .calendar-box {
-  padding: 0rem;
-}
-.container .wrap section.dashboard article.account-calendar .inner .calendar-wrap .calendar .calendar-box .ymd,
-.container .wrap section.dashboard article.account-calendar .inner .calendar-wrap .calendar .calendar-box .ctr-box {
-  display: none;
-}
-.container .wrap section.dashboard article.account-calendar .inner .calendar-wrap .calendar .calendar-box .cal-table tr th,
-.container .wrap section.dashboard article.account-calendar .inner .calendar-wrap .calendar .calendar-box .cal-table tr td {
-  font-size: 0.875rem;
-  width: 3.375rem;
-  letter-spacing: -0.0625rem;
-}
-.container .wrap section.dashboard article.account-calendar .inner .calendar-wrap .calendar .calendar-box .cal-table tr th {
-  color: #AAAAAA;
-  line-height: 2.5rem;
-}
-.container .wrap section.dashboard article.account-calendar .inner .calendar-wrap .calendar .calendar-box .cal-table tr td {
-  line-height: 4.8125rem;
-  z-index: 1;
-  position: relative;
-}
-.container .wrap section.dashboard article.account-calendar .inner .calendar-wrap .calendar .calendar-box .cal-table tr td.today {
-  background-color: #fff;
-  font-weight: 400;
-  position: relative;
-  color: #fff;
-}
-.container .wrap section.dashboard article.account-calendar .inner .calendar-wrap .calendar .calendar-box .cal-table tr td.today:after {
-  content: '';
-  display: block;
-  background-color: #103831;
-  width: 3.25rem;
-  height: 3.25rem;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  right: auto;
-  bottom: auto;
-  transform: translate(-50%, -50%);
-  border-radius: 50%;
-  z-index: -1;
-}
-.container .wrap section.dashboard article.account-calendar .inner .calendar-wrap .calendar .calendar-box .cal-table tr td.day-active {
-  background: transparent;
-  color: #333;
-}
-.container .wrap section.dashboard article.account-calendar .inner .calendar-wrap .calendar .calendar-box .cal-table tr td span {
-  width: 100%;
-  display: inline-block;
-  position: absolute;
-  left: 50%;
-  top: 2.25rem;
-  right: auto;
-  bottom: auto;
-  transform: translateX(-50%);
-}
-.container .wrap section.dashboard article.account-calendar .inner .calendar-wrap .calendar .calendar-box .cal-table tr td i {
-  width: 0.5625rem;
-  height: 0.5625rem;
-  border-radius: 50%;
-  display: inline-block;
-  margin-top: 0rem;
-  margin-right: 0.125rem;
-  margin-bottom: 0rem;
-  margin-left: 0.125rem;
-}
-.container .wrap section.dashboard article.account-calendar .inner .calendar-wrap .calendar .calendar-box .cal-table tr td i:nth-child(1) {
-  background-color: #FAB856;
-}
-.container .wrap section.dashboard article.account-calendar .inner .calendar-wrap .calendar .calendar-box .cal-table tr td i:nth-child(2) {
-  background-color: #6F95F2;
-}
-.container .wrap section.dashboard article.account-calendar .inner .calendar-wrap .calendar .calendar-box .cal-table tr td i:nth-child(3) {
-  background-color: #96C15A;
 }
 .container .wrap section.dashboard article.account-calendar .inner .sc-tit {
   font-size: 1rem;
@@ -2263,6 +2062,100 @@ img {
 }
 .container .wrap section.dashboard[data-page='8'] .hosp-info {
   display: inline-block !important;
+}
+.calendar-wrap {
+  width: 100%;
+  height: 30.75rem;
+  border: 1px solid #eee;
+  padding-top: 1.25rem;
+  padding-right: 0rem;
+  padding-bottom: 1.875rem;
+  padding-left: 0rem;
+  border-radius: 0.375rem;
+  box-sizing: border-box;
+  margin-bottom: 1.875rem;
+  position: relative;
+  z-index: 2;
+}
+.calendar-wrap .calendar {
+  padding: 0rem;
+  border-bottom: 0 !important;
+}
+.calendar-wrap .calendar .calendar-box {
+  padding: 0rem;
+}
+.calendar-wrap .calendar .calendar-box .ymd,
+.calendar-wrap .calendar .calendar-box .ctr-box {
+  display: none;
+}
+.calendar-wrap .calendar .calendar-box .cal-table tr th,
+.calendar-wrap .calendar .calendar-box .cal-table tr td {
+  font-size: 0.875rem;
+  width: 3.375rem;
+  letter-spacing: -0.0625rem;
+}
+.calendar-wrap .calendar .calendar-box .cal-table tr th {
+  color: #AAAAAA;
+  line-height: 2.5rem;
+}
+.calendar-wrap .calendar .calendar-box .cal-table tr td {
+  line-height: 4.8125rem;
+  z-index: 1;
+  position: relative;
+}
+.calendar-wrap .calendar .calendar-box .cal-table tr td.today {
+  background-color: #fff !important;
+  font-weight: 400;
+  position: relative;
+  color: #fff;
+}
+.calendar-wrap .calendar .calendar-box .cal-table tr td.today:after {
+  content: '';
+  display: block;
+  background-color: #103831;
+  width: 3.25rem;
+  height: 3.25rem;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  right: auto;
+  bottom: auto;
+  transform: translate(-50%, -50%);
+  border-radius: 50%;
+  z-index: -1;
+}
+.calendar-wrap .calendar .calendar-box .cal-table tr td.day-active {
+  background: transparent;
+  color: #333;
+}
+.calendar-wrap .calendar .calendar-box .cal-table tr td span {
+  width: 100%;
+  display: inline-block;
+  position: absolute;
+  left: 50%;
+  top: 2.25rem;
+  right: auto;
+  bottom: auto;
+  transform: translateX(-50%);
+}
+.calendar-wrap .calendar .calendar-box .cal-table tr td i {
+  width: 0.5625rem;
+  height: 0.5625rem;
+  border-radius: 50%;
+  display: inline-block;
+  margin-top: 0rem;
+  margin-right: 0.125rem;
+  margin-bottom: 0rem;
+  margin-left: 0.125rem;
+}
+.calendar-wrap .calendar .calendar-box .cal-table tr td i:nth-child(1) {
+  background-color: #FAB856;
+}
+.calendar-wrap .calendar .calendar-box .cal-table tr td i:nth-child(2) {
+  background-color: #6F95F2;
+}
+.calendar-wrap .calendar .calendar-box .cal-table tr td i:nth-child(3) {
+  background-color: #96C15A;
 }
 ul li {
   position: relative;
