--- a/css/member.css
+++ b/css/member.css
@@ -337,8 +337,6 @@ img {
   font-size: 1.5rem;
 }
 .container .wrap section.dashboard article .select {
-  font-size: 1rem;
-  line-height: 1.1875rem;
   position: relative;
   display: inline-block;
   margin-top: 0.125rem;
@@ -348,6 +346,8 @@ img {
   z-index: 2;
 }
 .container .wrap section.dashboard article .select select {
+  font-size: 1rem;
+  line-height: 1.1875rem;
   border: 0;
   width: 100%;
   padding-right: 0.625rem;
@@ -2064,52 +2064,142 @@ img {
   display: inline-block !important;
 }
 .calendar-wrap {
+  font-size: 0.875rem;
+  line-height: 1.0625rem;
+  position: relative;
+  margin-top: 1.25rem;
+}
+.calendar-wrap .month-change {
+  width: 1.75rem;
+  height: 1.75rem;
+  display: inline-block;
+  cursor: pointer;
+  position: absolute;
+  right: 0rem;
+  top: -3.625rem;
+  left: auto;
+  bottom: auto;
+}
+.calendar-wrap .month-change.prev {
+  background-repeat: no-repeat;
+  background-image: url('../img/member/btn_prev.png');
+  background-size: contain;
+  right: 2.375rem;
+}
+.calendar-wrap .month-change.next {
+  background-repeat: no-repeat;
+  background-image: url('../img/member/btn_next.png');
+  background-size: contain;
+}
+.calendar-wrap table {
+  width: 100%;
+  table-layout: fixed;
+}
+.calendar-wrap table tr th,
+.calendar-wrap table tr td {
+  width: 5.3125rem;
+  height: 4.6875rem;
+  text-align: center;
+  letter-spacing: -0.05em;
+  font-weight: 500;
+  vertical-align: top;
+}
+.calendar-wrap table tr th {
+  font-size: 0.9375rem;
+  line-height: 1.125rem;
+  color: #aaa;
+}
+.calendar-wrap table tr td {
+  position: relative;
+}
+.calendar-wrap table tr td:nth-child(1) {
+  color: #FA5353;
+}
+.calendar-wrap table tr td div {
+  width: 100%;
+  height: 100%;
+}
+.calendar-wrap table tr td div span {
+  display: inline-block;
+  z-index: 1;
+  position: relative;
+}
+.calendar-wrap.calendar-wrap1 table tr td div i.price {
+  width: 100%;
+  height: 98%;
+  display: inline-block;
+  position: absolute;
+  left: 0rem;
+  top: 0rem;
+  right: auto;
+  bottom: auto;
+  background-color: #F5F5F5;
+}
+.calendar-wrap.calendar-wrap1 table tr td div i.price s {
+  font-size: 0.9375rem;
+  line-height: 1.125rem;
+  letter-spacing: -0.05em;
+  font-weight: 500;
+  text-align: center;
+  position: absolute;
+  left: 50%;
+  bottom: 0.875rem;
+  right: auto;
+  top: auto;
+  transform: translateX(-50%);
+}
+.calendar-wrap.calendar-wrap2 {
   width: 100%;
   height: 30.75rem;
   border: 1px solid #eee;
-  padding-top: 1.25rem;
-  padding-right: 0rem;
-  padding-bottom: 1.875rem;
-  padding-left: 0rem;
   border-radius: 0.375rem;
-  box-sizing: border-box;
+  margin-top: 0rem;
   margin-bottom: 1.875rem;
   position: relative;
   z-index: 2;
 }
-.calendar-wrap .calendar {
-  padding: 0rem;
-  border-bottom: 0 !important;
+.calendar-wrap.calendar-wrap2 .month-change {
+  width: 2.25rem;
+  height: 2.25rem;
+  display: inline-block;
+  cursor: pointer;
+  position: absolute;
+  right: 0rem;
+  top: -3.125rem;
+  left: auto;
+  bottom: auto;
 }
-.calendar-wrap .calendar .calendar-box {
-  padding: 0rem;
+.calendar-wrap.calendar-wrap2 .month-change.prev {
+  background-repeat: no-repeat;
+  background-image: url('../img/member/btn_prev.svg');
+  background-size: contain;
+  right: 3rem;
 }
-.calendar-wrap .calendar .calendar-box .ymd,
-.calendar-wrap .calendar .calendar-box .ctr-box {
-  display: none;
+.calendar-wrap.calendar-wrap2 .month-change.next {
+  background-repeat: no-repeat;
+  background-image: url('../img/member/btn_next.svg');
+  background-size: contain;
 }
-.calendar-wrap .calendar .calendar-box .cal-table tr th,
-.calendar-wrap .calendar .calendar-box .cal-table tr td {
+.calendar-wrap.calendar-wrap2 table th,
+.calendar-wrap.calendar-wrap2 table td {
   font-size: 0.875rem;
   width: 3.375rem;
+  height: 4.8125rem;
   letter-spacing: -0.0625rem;
+  vertical-align: middle;
 }
-.calendar-wrap .calendar .calendar-box .cal-table tr th {
+.calendar-wrap.calendar-wrap2 table th {
   color: #AAAAAA;
   line-height: 2.5rem;
 }
-.calendar-wrap .calendar .calendar-box .cal-table tr td {
-  line-height: 4.8125rem;
+.calendar-wrap.calendar-wrap2 table td {
+  line-height: 0rem;
   z-index: 1;
   position: relative;
+  padding-top: 4.25rem;
+  box-sizing: border-box;
 }
-.calendar-wrap .calendar .calendar-box .cal-table tr td.today {
-  background-color: #fff !important;
-  font-weight: 400;
-  position: relative;
-  color: #fff;
-}
-.calendar-wrap .calendar .calendar-box .cal-table tr td.today:after {
+.calendar-wrap.calendar-wrap2 table td.active-day:after {
   content: '';
   display: block;
   background-color: #103831;
@@ -2124,21 +2214,24 @@ img {
   border-radius: 50%;
   z-index: -1;
 }
-.calendar-wrap .calendar .calendar-box .cal-table tr td.day-active {
-  background: transparent;
-  color: #333;
+.calendar-wrap.calendar-wrap2 table td.active-day span {
+  color: #fff;
 }
-.calendar-wrap .calendar .calendar-box .cal-table tr td span {
-  width: 100%;
+.calendar-wrap.calendar-wrap2 table td div {
+  overflow: hidden;
+}
+.calendar-wrap.calendar-wrap2 table td div span {
   display: inline-block;
   position: absolute;
   left: 50%;
-  top: 2.25rem;
+  top: 50%;
   right: auto;
   bottom: auto;
-  transform: translateX(-50%);
+  transform: translate(-50%, -50%);
+  height: 1.0625rem;
+  line-height: 1.0625rem;
 }
-.calendar-wrap .calendar .calendar-box .cal-table tr td i {
+.calendar-wrap.calendar-wrap2 table td div i {
   width: 0.5625rem;
   height: 0.5625rem;
   border-radius: 50%;
@@ -2148,14 +2241,35 @@ img {
   margin-bottom: 0rem;
   margin-left: 0.125rem;
 }
-.calendar-wrap .calendar .calendar-box .cal-table tr td i:nth-child(1) {
+.calendar-wrap.calendar-wrap2 table td div i.pet-a {
   background-color: #FAB856;
 }
-.calendar-wrap .calendar .calendar-box .cal-table tr td i:nth-child(2) {
+.calendar-wrap.calendar-wrap2 table td div i.pet-b {
   background-color: #6F95F2;
 }
-.calendar-wrap .calendar .calendar-box .cal-table tr td i:nth-child(3) {
+.calendar-wrap.calendar-wrap2 table td div i.pet-c {
   background-color: #96C15A;
+}
+.calendar-wrap.calendar-wrap2 table td div i.pet-d {
+  background-color: #FEA4AE;
+}
+.calendar-wrap.calendar-wrap2 table td div i.pet-e {
+  background-color: #63D0F2;
+}
+.calendar-wrap.calendar-wrap2 table td div i.pet-f {
+  background-color: #FD6D6D;
+}
+.calendar-wrap.calendar-wrap2 table td div i.pet-g {
+  background-color: #F4DD60;
+}
+.calendar-wrap.calendar-wrap2 table td div i.pet-h {
+  background-color: #BBA4FE;
+}
+.calendar-wrap.calendar-wrap2 table td div i.pet-i {
+  background-color: #517B58;
+}
+.calendar-wrap.calendar-wrap2 table td div i.pet-j {
+  background-color: #B98231;
 }
 ul li {
   position: relative;
