--- a/css/member.css
+++ b/css/member.css
@@ -552,13 +552,13 @@ img {
   margin-bottom: 1.25rem;
 }
 .container .wrap section.dashboard article.noti-evt .note .view {
-  width: 21.25rem;
+  width: 22.5rem;
   display: inline-block;
   vertical-align: top;
 }
 .container .wrap section.dashboard article.noti-evt .note .view ul li {
-  width: 9.375rem;
-  height: 9.375rem;
+  width: 10rem;
+  height: 10rem;
   margin-top: 0rem;
   margin-right: 1.25rem;
   margin-bottom: 1.25rem;
@@ -585,7 +585,7 @@ img {
   top: 50%;
   right: auto;
   bottom: auto;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%) scale(1.1);
   z-index: 1;
 }
 .container .wrap section.dashboard article.noti-evt .note .view ul li:after {
@@ -604,16 +604,16 @@ img {
   transform: translate(-50%, -50%);
 }
 .container .wrap section.dashboard article.noti-evt .note .month-wrap {
-  width: 26.25rem;
-  height: 20rem;
+  width: 25rem;
+  height: 21.25rem;
   display: inline-block;
   vertical-align: top;
   position: relative;
   box-shadow: 1px 2px 6px 2px rgba(51, 51, 51, 0.06);
 }
 .container .wrap section.dashboard article.noti-evt .note .month-wrap .swiper-container {
-  width: 26.25rem;
-  height: 23.125rem;
+  width: 25rem;
+  height: 24.375rem;
   padding-top: 3.125rem;
   box-sizing: border-box;
   margin-top: -3.125rem;
@@ -633,6 +633,9 @@ img {
   font-weight: 600;
   letter-spacing: -0.125rem;
   margin-bottom: 1.25rem;
+}
+.container .wrap section.dashboard article.noti-evt .note .month-wrap .swiper-container .swiper-btn {
+  display: none;
 }
 .container .wrap section.dashboard article.noti-evt .info ul li {
   display: inline-block;
@@ -977,10 +980,6 @@ img {
 .container .wrap section.dashboard article.inoculation .inner .cont .list-cont.list1 .list-box .noti ul li {
   margin-bottom: 0.625rem;
 }
-.container .wrap section.dashboard article.inoculation .inner .cont .list-cont.list1 .list-box .list-box-inner {
-  height: 21.875rem;
-  overflow: auto;
-}
 .container .wrap section.dashboard article.inoculation .inner .cont .list-cont.list2 {
   text-align: left;
   position: relative;
@@ -1011,6 +1010,39 @@ img {
   top: 0rem;
   left: auto;
   bottom: auto;
+}
+.container .wrap section.dashboard article.inoculation .inner .cont .list-cont.list2 .total {
+  width: 47.5rem;
+  height: 6.25rem;
+  background-color: #103831;
+  box-shadow: 1px 2px 6px 2px rgba(51, 51, 51, 0.06);
+  border-radius: 0 0 0.375rem 0.375rem;
+  padding: 2.5rem;
+  box-sizing: border-box;
+  text-align: left;
+  margin-left: -2.5rem;
+}
+.container .wrap section.dashboard article.inoculation .inner .cont .list-cont.list2 .total p {
+  font-size: 0.9375rem;
+  line-height: 1.0625rem;
+  color: #fff;
+  zoom: 1;
+}
+.container .wrap section.dashboard article.inoculation .inner .cont .list-cont.list2 .total p:after {
+  content: '';
+  display: block;
+  clear: both;
+  font-size: 0;
+  height: 0;
+  visibility: hidden;
+}
+.container .wrap section.dashboard article.inoculation .inner .cont .list-cont.list2 .total p i {
+  float: right;
+}
+.container .wrap section.dashboard article.inoculation .inner .cont .list-cont.list2 .total p i span {
+  font-size: 1rem;
+  line-height: 1.1875rem;
+  letter-spacing: -0.05em;
 }
 .container .wrap section.dashboard article.inoculation .inner .cont .list-cont.list3 {
   text-align: left;
@@ -1046,6 +1078,7 @@ img {
   padding-left: 0.875rem;
   box-sizing: border-box;
   border-radius: 0 0 0.25rem 0.25rem;
+  padding-left: 0rem;
 }
 .container .wrap section.dashboard article.inoculation .inner .cont .list-cont.list3 span {
   font-size: 0.875rem;
@@ -1087,44 +1120,9 @@ img {
 .container .wrap section.dashboard article.inoculation .inner .cont[data-view='3'] .list3 {
   display: inline-block;
 }
-.container .wrap section.dashboard article.inoculation .inner .total {
-  width: 100%;
-  height: 6.25rem;
-  background-color: #103831;
-  box-shadow: 1px 2px 6px 2px rgba(51, 51, 51, 0.06);
-  border-radius: 0 0 0.375rem 0.375rem;
-  padding: 2.5rem;
-  box-sizing: border-box;
-  text-align: left;
-  display: none;
-}
-.container .wrap section.dashboard article.inoculation .inner .total p {
-  font-size: 0.9375rem;
-  line-height: 1.0625rem;
-  color: #fff;
-  zoom: 1;
-}
-.container .wrap section.dashboard article.inoculation .inner .total p:after {
-  content: '';
-  display: block;
-  clear: both;
-  font-size: 0;
-  height: 0;
-  visibility: hidden;
-}
-.container .wrap section.dashboard article.inoculation .inner .total p i {
-  float: right;
-}
-.container .wrap section.dashboard article.inoculation .inner .total p i span {
-  font-size: 1rem;
-  line-height: 1.1875rem;
-  letter-spacing: -0.05em;
-}
-.container .wrap section.dashboard article.inoculation .inner [data-view='2'] {
-  border-radius: 0.375rem 0.375rem 0 0;
-}
-.container .wrap section.dashboard article.inoculation .inner [data-view='2'] + .total {
-  display: inline-block;
+.container .wrap section.dashboard article.inoculation .inner .cont.cont-view1 {
+  overflow: auto;
+  overflow-x: hidden;
 }
 .container .wrap section.dashboard article.arti-style .inner .cont .filter-wrap {
   margin-bottom: 0.375rem;
@@ -2013,6 +2011,9 @@ img {
 .container .wrap section.dashboard.aside-open article.inoculation .inner .cont .list-cont .list-box .list-box-inner {
   width: 39.0625rem;
 }
+.container .wrap section.dashboard.aside-open article.inoculation .inner .cont .list-cont.list2 .total {
+  width: 42.5rem;
+}
 .container .wrap section.dashboard.aside-open article.account-calendar .inner .acc-book .acc-cont .graph {
   width: 25.9375rem;
   padding-top: 1.5625rem;
@@ -2098,6 +2099,9 @@ img {
   line-height: 1.0625rem;
   position: relative;
   margin-top: 1.25rem;
+  margin-right: 0rem;
+  margin-bottom: 1.25rem;
+  margin-left: 0rem;
 }
 .calendar-wrap table {
   width: 100%;
@@ -2965,7 +2969,7 @@ ul li.pharm .inf .t i {
 .popup .inner .detail-pop-inner .t-txt {
   font-size: 1.5rem;
   line-height: 1.8125rem;
-  letter-spacing: -0.05em;
+  letter-spacing: -0.04em;
   font-weight: 300;
   margin-bottom: 0.75rem;
 }
