--- a/css/member.less
+++ b/css/member.less
@@ -134,19 +134,20 @@ img { image-rendering:auto; backface-visibility:hidden; }
             .note {
               h3 { .mb(10); }
               .sub { .fs(15); .lh(18); color:#666; .mb(20); }
-              .view { .w(340); .ib; .vat;
-                ul li { .wh(150,150); .m(0,20,20,0); .br(6); .shadow; .ib; .bgc(#fff); .vat; .rel; overflow: hidden;
+              .view { .w(360); .ib; .vat;
+                ul li { .wh(160,160); .m(0,20,20,0); .br(6); .shadow; .ib; .bgc(#fff); .vat; .rel; overflow: hidden;
                   &:nth-child(n+3) { .mb(0); }
                   a { .f; .pointer; }
-                  img { .abs; .lt(50%,50%); transform: translate(-50%,-50%); z-index: 1; }
+                  img { .abs; .lt(50%,50%); transform: translate(-50%,-50%) scale(1.1); z-index: 1; }
                   &:after { .cnt; .wh(40,40); .contain('../img/member/logo_spl.svg'); .abs; .lt(50%,50%); transform: translate(-50%,-50%); }
                 }
               }
-              .month-wrap { .wh(420,320); .ib; .vat; .rel; .shadow;
-                .swiper-container { .wh(420,370); .pt(50); .-box; .mt(-50);
+              .month-wrap { .wh(400,340); .ib; .vat; .rel; .shadow;
+                .swiper-container { .wh(400,390); .pt(50); .-box; .mt(-50);
                   .swiper-slide { .p(30,10,30,30); .-box; .bgc(#fff); .br(6);
                     .month { .fs(15); .lh(18); .semi-bold; .ls(-2);  .mb(20); }
                   }
+                  .swiper-btn { .hide; }
                 }
               }
             }
@@ -247,7 +248,7 @@ img { image-rendering:auto; backface-visibility:hidden; }
                           li { .mb(10); }
                         }
                       }
-                      .list-box-inner { .h(350); overflow:auto; }
+                      //.list-box-inner { .h(350); overflow:auto; }
                     }
                   }
                   &.list2 { .tl; .rel; .h(500);
@@ -263,12 +264,19 @@ img { image-rendering:auto; backface-visibility:hidden; }
                         }
                       }
                     }
+                    .total { .wh(760,100); .bgc(#103831); box-shadow: 1px 2px 6px 2px rgba(51, 51, 51, 0.06); .br-b(6); .p(40); .-box; .tl; .ml(-40);
+                      p { .fs(15); .lh(17); color:#fff; .clear;
+                        i { .fr;
+                          span { .fs(16); .lh(19); .ls(-0.05em); }
+                        }
+                      }
+                    }
                   }
                   &.list3 { .tl;
                     ul { .tc;
                       li { .wh(190,190); .ib; .vat; .mr(15); .rel; overflow: hidden;
                         &:last-child { .mr(0); }
-                        p { .fs(14); color:#fff; .ls(-0.05em); .wh(100%,38); .lh(38); background: rgba(17,17,17,0.5); .abs; .lb; .pl(14); .-box; .br-b(4); }
+                        p { .fs(14); color:#fff; .ls(-0.05em); .wh(100%,38); .lh(38); background: rgba(17,17,17,0.5); .abs; .lb; .pl(14); .-box; .br-b(4); .pl(0); }
                       }
                     }
                     span { .fs(14); .lh(17); font-weight: 500; color:#555; .ib; .mt(20); }
@@ -285,16 +293,11 @@ img { image-rendering:auto; backface-visibility:hidden; }
                 &[data-view='1'] .list1,
                 &[data-view='2'] .list2,
                 &[data-view='3'] .list3 { .ib; }
+                &.cont-view1 { overflow: auto; overflow-x: hidden; }
               }
-              .total { .wh(100%,100); .bgc(#103831); box-shadow: 1px 2px 6px 2px rgba(51, 51, 51, 0.06); .br-b(6); .p(40); .-box; .tl; .hide;
-                p { .fs(15); .lh(17); color:#fff; .clear;
-                  i { .fr;
-                    span { .fs(16); .lh(19); .ls(-0.05em); }
-                  }
-                }
-              }
-              [data-view='2'] { .br-t(6); }
-              [data-view='2'] + .total { .ib; }
+
+              //[data-view='2'] { .br-t(6); }
+              //[data-view='2'] + .total { .ib; }
             }
           }
 
@@ -546,7 +549,10 @@ img { image-rendering:auto; backface-visibility:hidden; }
               .inner .cont .filter-wrap a { .w(295); }
             }
             &.inoculation {
-              .inner .cont .list-cont .list-box .list-box-inner { .w(625); }
+              .inner .cont .list-cont {
+                .list-box .list-box-inner { .w(625); }
+                &.list2 .total { .w(680); }
+              }
             }
             &.account-calendar {
               .inner {
@@ -614,7 +620,7 @@ img { image-rendering:auto; backface-visibility:hidden; }
     }
   }
 }
-.calendar-wrap { .fs(14); .lh(17); .rel; .mt(20);
+.calendar-wrap { .fs(14); .lh(17); .rel; .m(20,0);
   table { .wf; .t-fix;
     tr {
       th, td { .wh(85,75); .tc; .ls(-0.05em); font-weight: 500; .vat; }
@@ -836,7 +842,7 @@ ul {
     }
 
     .detail-pop-inner { .p(30); .-box; .hide; .min-h(660);
-      .t-txt { .fs(24); .lh(29); .ls(-0.05em); .light; .mb(12);
+      .t-txt { .fs(24); .lh(29); .ls(-0.04em); .light; .mb(12);
         b { .semi-bold; }
       }
       .noti { .fs(13); .lh(18); .ls(-0.05em); color:#FA5353; .ti(-10); .ml(10); }
