--- a/css/member.less
+++ b/css/member.less
@@ -863,7 +863,7 @@ ul {
         b { .semi-bold; }
       }
       .noti { .fs(13); .lh(18); .ls(-0.05em); color:#FA5353; .ti(-10); .ml(10); }
-      .de-wrap { .h(460); overflow: auto; }
+      .de-wrap { .wh(300,460); overflow: auto; .pr(15); .-box; }
       .sub-tit { .fs(14); .lh(17); .clear; font-weight: 500; .block;
         .price { .fs(15); .lh(18); .fr; }
         &.total { .pb(20); .-b(#eee); .mt(30);
@@ -873,7 +873,7 @@ ul {
       ul { .m(10,0,40);
         li { .p(10,0); .-box; }
       }
-      .notice { .fs(13); .lh(16); font-weight: 500; color:#999; .ls(-1%); .tl; }
+      .notice { .fs(13); .lh(22); font-weight: 500; color:#999; .ls(-1%); .tl; }
     }
   }
   &.p-open { .ib;
